--- a/mehmet_akif_ersoy.html
+++ b/mehmet_akif_ersoy.html
@@ -45,6 +45,6 @@
 </body>
 </html>
 
-<button onclick="window.location.href='ana_sayfa.html'">
+<button onclick="window.location.href='index.html'">
     Daha Fazla Şiir
 </button>
