--- a/namık_kemal.html
+++ b/namık_kemal.html
@@ -39,7 +39,7 @@
         En uzun sürgünü 1867’de Famagusta, Kıbrıs’ta oldu, burada birçok eserini yazdı ve edebiyatla ilgilenmeye devam etti. <br>
       </h3>
       <hr>
-      <button onclick="window.location.href='ana_sayfa.html'" style="font-size: x-large;">
+      <button onclick="window.location.href='index.html'" style="font-size: x-large;">
         Daha Fazla Şiir İçin !
       </button>
 </body>
